@startuml
'https://plantuml.com/class-diagram

abstract class AbstractList
abstract AbstractCollection
interface List
interface Collection

List <|-- AbstractList
Collection <|-- AbstractCollection

Collection <|- List
AbstractCollection <|- AbstractList
AbstractList <|-- ArrayList
skinparam classAttributeIconSize 0

class Inventory {
- List Guitars;

+ addGuitars()
+ getGuitars (): Guitar
+ Search (): List
}

Class Guitar{
- String serialNumber;
- double price;
+ getSerialNumber(): String
+ getPrice(): double
+ setPrice(): double
+ getSpec(): GuitarSpec
}

Class guitarSpec{
- Builder builder;
- String model;
- Type type;
- int numStrings;
- Wood backWood;
- Wood topWood;
+ getBuilder(): Builder
+ getModel():  String
+ getType(): Type
+ getNumString(): int
+ getBackWood(): Wood
+ getTopWood(): Wood

enum Builder{

FENDER
GIBSON
MARTINS
COLLINGS

}
enum Type{

ACOUSTIC
ELETRIC

}
enum Wood{

CEDAR
ALDEr
MAHOGANY
}


Guitar --> GuitarSpec

Inve






@enduml